fixed scrollbar issue

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 img{
-    width:50vw;
+    width:40dvw;
     height:auto;
 }
 
